<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_warehouse_world</name>
  <version>0.1.0</version>
  <description>Warehouse Gazebo test worlds (vertical box stacks) for the Franka fr3.</description>
  <maintainer email="vrobotics-developer@vegam.co">vrobotics developer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>franka_gazebo_bringup</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
