<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_spine_examples</name>
  <version>2.5.0</version>
  <description>Example clients for the Franka Spine action/service server.</description>

  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>franka_spine_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>franka_spine_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
